Include non-composited layout views in existing workaround for clipping changes.

BUG=633869

Review-Url: https://codereview.chromium.org/2212403004
Cr-Commit-Position: refs/heads/master@{#410222}

Former-commit-id: 74d1e73747b73764b50dfaf413344397c14b971f